--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,6 +145,14 @@ limitations under the License. -->
     <item name="android:background">@drawable/calc_roundcorner</item>
   </style>
 
+  <style name="calc_inidicator_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:textColor">#000000</item>
+    <item name="android:background">#CCC69B</item>
+  </style>
+
   <style name="calc_selection_style">
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
