--- a/app/src/main/res/layout/dialog_calc.xml
+++ b/app/src/main/res/layout/dialog_calc.xml
@@ -26,6 +26,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
@@ -34,7 +35,6 @@
             android:layout_height="wrap_content"
             android:background="@color/textInputEditText"
             android:inputType="textMultiLine"
-            android:imeOptions="actionDone"
             />
       </com.google.android.material.textfield.TextInputLayout>
 
@@ -58,6 +58,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/textViewCalcDesc"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintBottom_toBottomOf="parent"
           app:endIconMode="clear_text"
           >
         <com.google.android.material.textfield.TextInputEditText
