--- a/app/src/main/res/layout/dialog_calc.xml
+++ b/app/src/main/res/layout/dialog_calc.xml
@@ -9,7 +9,6 @@
   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:scrollbars="vertical"
       >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,25 +17,20 @@
         android:padding="8dp"
         >
 
-      <com.google.android.material.textfield.TextInputLayout
-          android:id="@+id/textInputLayout1"
-          android:layout_width="0dp"
+      <com.thecloudsite.stockroom.calc.MyEditText
+          app:endIconMode="clear_text"
+          android:id="@+id/calc_code"
+          android:textSize="12sp"
+          android:fontFamily="monospace"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
-          app:endIconMode="clear_text"
-          >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/calc_code"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/textInputEditText"
-            android:inputType="textMultiLine"
-            />
-      </com.google.android.material.textfield.TextInputLayout>
+          android:background="@color/textInputEditText"
+          android:inputType="textMultiLine"
+          />
 
       <TextView
           android:id="@+id/textViewCalcDesc"
@@ -46,7 +40,7 @@
           app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintTop_toBottomOf="@+id/calc_code"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintVertical_bias="0.8"
           />
@@ -57,7 +51,7 @@
           android:layout_margin="8dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/textViewCalcDesc"
-          app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+          app:layout_constraintTop_toBottomOf="@+id/calc_code"
           app:layout_constraintBottom_toBottomOf="parent"
           app:endIconMode="clear_text"
           >
