syntax code editor

--- a/app/src/main/res/layout/dialog_calc.xml
+++ b/app/src/main/res/layout/dialog_calc.xml
@@ -17,10 +17,9 @@
         android:padding="8dp"
         >
 
-      <com.thecloudsite.stockroom.calc.MyEditText
+      <com.thecloudsite.stockroom.codeeditor.Editor
           app:endIconMode="clear_text"
           android:id="@+id/calc_code"
-          android:textSize="12sp"
           android:fontFamily="monospace"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
