--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -38,5 +38,7 @@ limitations under the License. -->
   <color name="settingsblue">#33B5E5</color>
   <color name="calcShift">#0094FF</color>
   <color name="calcShiftPressed">#7FC9FF</color>
+  <color name="calcFunction">#10106F</color>
+  <color name="calcFunctionPressed">#3D76CC</color>
 
 </resources>
