--- a/app/src/main/res/layout-land/fragment_calc.xml
+++ b/app/src/main/res/layout-land/fragment_calc.xml
@@ -28,7 +28,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
-        style="@style/calc_extrakeys_style"
+        style="@style/calc_extrakeys_land_style"
         />
 
     <TextView
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
-        style="@style/calc_extrakeys_style"
+        style="@style/calc_extrakeys_land_style"
         />
 
     <TextView
@@ -58,7 +58,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF2"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -68,7 +68,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF3"
-        style="@style/calc_extrakeys_style"
+        style="@style/calc_extrakeys_land_style"
         />
 
     <TextView
@@ -78,7 +78,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF3"
-        style="@style/calc_extrakeys_style"
+        style="@style/calc_extrakeys_land_style"
         />
 
     <TextView
@@ -88,7 +88,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -98,7 +98,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -108,7 +108,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -118,7 +118,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guidelineF1"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -128,7 +128,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -138,7 +138,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -148,7 +148,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guidelineEnter"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -158,7 +158,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guideline789"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -168,7 +168,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guideline789"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -178,7 +178,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guideline789"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -188,7 +188,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guideline456"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -198,7 +198,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guideline456"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -208,7 +208,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guideline456"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -218,7 +218,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guideline123"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -228,7 +228,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guideline123"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -238,7 +238,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX4"
         app:layout_constraintStart_toEndOf="@id/guidelineX3"
         app:layout_constraintTop_toBottomOf="@+id/guideline123"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -248,7 +248,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX2"
         app:layout_constraintStart_toEndOf="@id/guidelineX1"
         app:layout_constraintTop_toBottomOf="@+id/guideline0"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -258,7 +258,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX3"
         app:layout_constraintStart_toEndOf="@id/guidelineX2"
         app:layout_constraintTop_toBottomOf="@+id/guideline0"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -268,7 +268,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guideline789"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -278,7 +278,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guideline456"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -288,7 +288,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guideline123"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <TextView
@@ -298,7 +298,7 @@
         app:layout_constraintEnd_toStartOf="@id/guidelineX5"
         app:layout_constraintStart_toEndOf="@id/guidelineX4"
         app:layout_constraintTop_toBottomOf="@+id/guideline0"
-        style="@style/calc_style"
+        style="@style/calc_land_style"
         />
 
     <androidx.constraintlayout.widget.Barrier
@@ -309,19 +309,11 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineDisp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3"
-        />
-
-    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineF3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.34"
+        app:layout_constraintGuide_percent="0.02"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -329,7 +321,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.42"
+        app:layout_constraintGuide_percent="0.14"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -337,7 +329,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.50"
+        app:layout_constraintGuide_percent="0.26"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -345,7 +337,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.58"
+        app:layout_constraintGuide_percent="0.38"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -353,7 +345,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.66"
+        app:layout_constraintGuide_percent="0.5"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -361,7 +353,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.74"
+        app:layout_constraintGuide_percent="0.62"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -369,7 +361,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.82"
+        app:layout_constraintGuide_percent="0.74"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -377,7 +369,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.90"
+        app:layout_constraintGuide_percent="0.86"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -389,7 +381,15 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineX1"
+        android:id="@+id/guidelineX0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.45"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -397,15 +397,15 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineX2"
+        android:id="@+id/guidelineTop2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.28"
+        app:layout_constraintGuide_percent="0.16"
         />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineX3"
+        android:id="@+id/guidelineX1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -413,11 +413,27 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineX2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.62"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineX3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.74"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineX4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.72"
+        app:layout_constraintGuide_percent="0.86"
         />
 
     <androidx.constraintlayout.widget.Guideline
@@ -425,14 +441,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.94"
+        app:layout_constraintGuide_percent="0.98"
         />
 
     <TextView
         android:id="@+id/calc_indicator_left"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guidelineX1"
+        app:layout_constraintEnd_toStartOf="@id/guidelineTop1"
         app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
         style="@style/calc_inidicator_style"
         />
@@ -440,8 +456,8 @@
     <TextView
         android:id="@+id/calc_indicator_depth"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/guidelineX2"
-        app:layout_constraintStart_toEndOf="@id/guidelineX1"
+        app:layout_constraintStart_toEndOf="@id/guidelineTop1"
+        app:layout_constraintEnd_toStartOf="@id/guidelineTop2"
         app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
         style="@style/calc_inidicator_style"
         />
@@ -450,20 +466,20 @@
         android:id="@+id/calc_indicator_shift"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guidelineX2"
+        app:layout_constraintEnd_toStartOf="@id/guidelineX0"
+        app:layout_constraintStart_toEndOf="@id/guidelineTop2"
         app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
         style="@style/calc_inidicator_style"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/calclines"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#CCC69B"
         android:padding="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/guidelineDisp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guidelineX0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidelineIndicator"
         />
