--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,12 +145,22 @@ limitations under the License. -->
     <item name="android:background">@drawable/calc_roundcorner</item>
   </style>
 
+  <style name="calc_extrakeys_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_roundcorner</item>
+  </style>
+
   <style name="calc_function_style">
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">0dp</item>
     <item name="android:layout_margin">4dp</item>
     <item name="android:padding">4dp</item>
-    <item name="android:textSize">20sp</item>
+    <item name="android:textSize">12sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_function_roundcorner</item>
   </style>
@@ -179,6 +189,46 @@ limitations under the License. -->
     <item name="android:layout_margin">4dp</item>
     <item name="android:padding">4dp</item>
     <item name="android:textSize">20sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_shift_roundcorner</item>
+  </style>
+
+  <style name="calc_land_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_roundcorner</item>
+  </style>
+
+  <style name="calc_extrakeys_land_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_roundcorner</item>
+  </style>
+
+  <style name="calc_function_land_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">10sp</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:background">@drawable/calc_function_roundcorner</item>
+  </style>
+
+  <style name="calc_shift_land_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:layout_margin">4dp</item>
+    <item name="android:padding">4dp</item>
+    <item name="android:textSize">14sp</item>
     <item name="android:textColor">#FFFFFF</item>
     <item name="android:background">@drawable/calc_shift_roundcorner</item>
   </style>
