--- a/app/src/main/res/layout-land/fragment_calc.xml
+++ b/app/src/main/res/layout-land/fragment_calc.xml
@@ -405,6 +405,14 @@
         />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineTop3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.26"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineX1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -463,11 +471,20 @@
         />
 
     <TextView
+        android:id="@+id/calc_indicator_radian"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/guidelineTop3"
+        app:layout_constraintStart_toEndOf="@id/guidelineTop2"
+        app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
+        style="@style/calc_inidicator_style"
+        />
+
+    <TextView
         android:id="@+id/calc_indicator_shift"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/guidelineX0"
-        app:layout_constraintStart_toEndOf="@id/guidelineTop2"
+        app:layout_constraintStart_toEndOf="@id/guidelineTop3"
         app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
         style="@style/calc_inidicator_style"
         />
