--- a/app/src/main/res/layout-land/fragment_calc_prog.xml
+++ b/app/src/main/res/layout-land/fragment_calc_prog.xml
@@ -133,7 +133,7 @@
 
             <TextView
                 android:id="@+id/calc_F13"
-                android:text="F9"
+                android:text="F13"
                 app:layout_constraintBottom_toTopOf="@id/guideline789"
                 app:layout_constraintEnd_toStartOf="@id/guidelineX2"
                 app:layout_constraintStart_toEndOf="@id/guidelineX1"
@@ -143,7 +143,7 @@
 
             <TextView
                 android:id="@+id/calc_F14"
-                android:text="F10"
+                android:text="F14"
                 app:layout_constraintBottom_toTopOf="@id/guideline789"
                 app:layout_constraintEnd_toStartOf="@id/guidelineX3"
                 app:layout_constraintStart_toEndOf="@id/guidelineX2"
@@ -153,7 +153,7 @@
 
             <TextView
                 android:id="@+id/calc_F15"
-                android:text="F1"
+                android:text="F15"
                 app:layout_constraintBottom_toTopOf="@id/guideline789"
                 app:layout_constraintEnd_toStartOf="@id/guidelineX4"
                 app:layout_constraintStart_toEndOf="@id/guidelineX3"
@@ -163,6 +163,7 @@
 
             <TextView
                 android:id="@+id/calc_F16"
+                android:text="F16"
                 app:layout_constraintBottom_toTopOf="@id/guideline789"
                 app:layout_constraintEnd_toStartOf="@id/guidelineX5"
                 app:layout_constraintStart_toEndOf="@id/guidelineX4"
@@ -395,6 +396,14 @@
                 />
 
             <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guidelineTop3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.26"
+                />
+
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guidelineX1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -453,11 +462,20 @@
                 />
 
             <TextView
+                android:id="@+id/calc_indicator_radian"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/guidelineTop3"
+                app:layout_constraintStart_toEndOf="@id/guidelineTop2"
+                app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
+                style="@style/calc_inidicator_style"
+                />
+
+            <TextView
                 android:id="@+id/calc_indicator_shift"
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/guidelineX0"
-                app:layout_constraintStart_toEndOf="@id/guidelineTop2"
+                app:layout_constraintStart_toEndOf="@id/guidelineTop3"
                 app:layout_constraintBottom_toTopOf="@id/guidelineIndicator"
                 style="@style/calc_inidicator_style"
                 />
