--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,9 @@ limitations under the License. -->
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
     <item name="actionBarTheme">@style/ThemeOverlay.AppTheme.ActionBar</item>
+<!--
+    <item name="android:windowDisablePreview">true</item>
+-->
   </style>
 
   <style name="ThemeOverlay.AppTheme.ActionBar" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
