--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-  <xyz.sangcomz.stickytimelineview.TimeLineRecyclerView
+  <com.thecloudsite.stockroom.timeline.TimeLineRecyclerView
       android:id="@+id/timeline_recycler_view"
       app:sectionBackgroundColor="@color/white"
       android:layout_width="match_parent"
