--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,4 +41,10 @@ limitations under the License. -->
   <color name="calcFunction">#0D0D5B</color>
   <color name="calcFunctionPressed">#3D76CC</color>
 
+  <color name="colorDefaultBackground">#F9F9F9</color>
+  <color name="colorDefaultTitle">#414fca</color>
+  <color name="colorDefaultSubTitle">#d16767</color>
+  <color name="colorDefaultLine">#51ae45</color>
+  <color name="colorDefaultCircle">#51ae45</color>
+  <color name="colorDefaultStroke">#F9F9F9</color>
 </resources>
