--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,17 @@ limitations under the License. -->
   <dimen name="min_height">48dp</dimen>
   <dimen name="graph_bottom_offset">8dp</dimen>
   <dimen name="small_text">10sp</dimen>
+
+  <!-- Default screen margins, per the Android Design guidelines. -->
+  <dimen name="recycler_section_header_height">64dp</dimen>
+  <dimen name="header_padding_left">12dp</dimen>
+  <dimen name="dot_padding_right">12dp</dimen>
+  <dimen name="header_textview_padding">8dp</dimen>
+  <dimen name="dot_size">20dp</dimen>
+
+  <dimen name="title_text_size">14sp</dimen>
+  <dimen name="sub_title_text_size">12sp</dimen>
+  <dimen name="line_width">4dp</dimen>
+  <dimen name="dot_radius">8dp</dimen>
+  <dimen name="dot_stroke_width">4dp</dimen>
 </resources>
